2006-01-26  Keith Packard  <keithp@keithp.com>

	* doc/tutorial/slides/cairo-code.svg:
	* doc/tutorial/slides/cairo-large-content.svg:
	* doc/tutorial/slides/cairo-separator.svg:
	* doc/tutorial/slides/cairo-title.svg:
	* doc/tutorial/slides/cairo.svg:

	Make watermark consistently translucent
	Use fill for dung outline
	Fix text locations

2006-01-26  Carl Worth  <cworth@cworth.org>

	* doc/tutorial/src/include/cairo-tutorial-gtk.h: Add a CONTROL-Q
	keybinding to quit.

2006-01-26  Keith Packard  <keithp@keithp.com>

	reviewed by: cworth

	* doc/tutorial/slides/cairo-blank.svg:
	* doc/tutorial/slides/cairo-code.svg:
	* doc/tutorial/slides/cairo-large-content.svg:
	* doc/tutorial/slides/cairo-separator.svg:
	* doc/tutorial/slides/cairo-title.svg:
	* doc/tutorial/slides/cairo.svg:
	* doc/tutorial/slides/tutorial.xml:
	Adopt proposed new cairo color scheme.
	Recolor scarab, eliminate gradient in dung
	Use new blue background color.
	Rework font sizes, use bold for titles.
	Change tutorial title.

2006-01-26  Carl Worth  <cworth@cworth.org>

	* doc/tutorial/slides/cairo-blank.svg: Shrink the font size to
	make the tutorial instructions fit.
	
	* doc/tutorial/slides/tutorial.xml: Format text to solve all
	problematic line wrapping.
	
	* doc/tutorial/src/README: Add my name to the README.

2006-01-26  Carl Worth  <cworth@cworth.org>

	* doc/tutorial/src/cairo-tutorial.h:
	* doc/tutorial/src/cairo-tutorial-gtk.h:
	* doc/tutorial/src/cairo-tutorial-pdf.h:
	* doc/tutorial/src/cairo-tutorial-png.h:
	* doc/tutorial/src/cairo-tutorial-xlib.h:
	* doc/tutorial/src/include/cairo-tutorial.h:
	* doc/tutorial/src/include/cairo-tutorial-gtk.h:
	* doc/tutorial/src/include/cairo-tutorial-pdf.h:
	* doc/tutorial/src/include/cairo-tutorial-png.h:
	* doc/tutorial/src/include/cairo-tutorial-xlib.h:
	Move the magic header files to be down in an include directory and
	more out of the way.
	
	* doc/tutorial/src/Makefile: Look for the headers in -I./include.
