@@ -1,3 +1,8 @@
+2006-01-29  Emmanuel Pacaud <emmanuel.pacaud@free.fr>
+
+	* src/cairo-svg-surface.c (emit_pattern_stops): fix offset of pattern
+	stops.
+
 2006-01-26  Keith Packard  <keithp@keithp.com>
 
 	* doc/tutorial/slides/cairo-code.svg:
